# wasteofspace

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac  test
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
debian/: changelog  control  copyright
debian/upstream/: metadata
doc/: Makefile  Makefile.am  Makefile.in  waste.1
inc/: main.h
src/: Makefile  Makefile.am  Makefile.in  main.c
src/.deps/: main.Po
