AC_INIT([waste], [1.0], [waste@mail.com])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs
AC_PROG_CC

# Checks for header files
AC_CHECK_HEADERS([stdio.h stdlib.h])

# Output
AC_CONFIG_FILES([
    Makefile
    src/Makefile
    doc/Makefile
])
AC_OUTPUT
